k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: core-agent
  labels:
    name: core-agent
    environment: production
